rt/test/errors/031/test.volt
//T macro:importfail
module test;

import m2;

fn main() i32
{
	return add(3, 3) - 6;
}
